tests/org.eclipse.mylyn.docs.intent.parser.test/dataTests/intentDocuments/errors/misplacedModelingUnit.intent
Document {
	Chapter Title {
		Text
		
		@M
		M@
	}
}
